<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="48dp"
    android:background="@color/background_color"
    tools:context="com.eldersoss.elderssearchviewdemoapp.MainActivity">

    <Button
        android:id="@+id/button_first_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_demo" />

    <Button
        android:id="@+id/button_second_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_demo" />

    <Button
        android:id="@+id/button_third_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_demo" />

    <Button
        android:id="@+id/button_fourth_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourth_demo" />

    <Button
        android:id="@+id/button_fifth_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fifth_demo" />

    <Button
        android:id="@+id/button_sixth_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sixth_demo" />

</LinearLayout>