<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SecondActivity">

    <com.eldersoss.elderssearchview.EldersSearchView
        android:id="@+id/elders_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:esvHintText="Search for something" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_layout_buttons"
        android:gravity="center"
        android:text="@string/desc_second" />

    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_set_searched_phrase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="Searched text"
            android:text="@string/set_text" />

        <Button
            android:id="@+id/button_search_for_phrase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="Text for search"
            android:text="@string/search_for_text" />

    </LinearLayout>

</RelativeLayout>